--- a/.github/workflows/master_dotnet2022.yml
+++ b/.github/workflows/master_dotnet2022.yml
@@ -34,9 +34,31 @@ jobs:
           name: .net-app
           path: ${{env.DOTNET_ROOT}}/myapp
 
-  deploy:
+  deploy-to-staging:
     runs-on: ubuntu-latest
     needs: build
+    environment:
+      name: 'Staging'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v2
+        with:
+          name: .net-app
+
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: 'dotnet2022'
+          slot-name: 'staging'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
+          package: .
+
+  deploy-to-production:
+    runs-on: ubuntu-latest
+    needs: deploy-to-staging
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
@@ -52,6 +74,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'dotnet2022'
-          slot-name: 'Production'
+          slot-name: 'staging'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_698E66C501A1469E9940A7B9DE45E822 }}
           package: .
