--- a/.github/workflows/master_dotnet2022.yml
+++ b/.github/workflows/master_dotnet2022.yml
@@ -57,6 +57,7 @@ jobs:
           package: .
 
   deploy-to-production:
+    if: false
     runs-on: ubuntu-latest
     needs: deploy-to-staging
     environment:
@@ -77,3 +78,20 @@ jobs:
           slot-name: 'staging'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_698E66C501A1469E9940A7B9DE45E822 }}
           package: .
+
+swap:
+    runs-on: ubuntu-latest
+    needs: deploy-to-staging
+    environment:
+      name: 'Production'
+      url: ${{ steps.swap-slots.outputs.webapp-url }}
+    steps:
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{secrets.AZURE_CREDENTIALS}}
+      - name: Swap slots
+        id: swap-slots
+        run: |
+          az webapp deployment slot swap -n dotnet2022 -g rg-dotnet2022 -s Staging
+          echo "::set-output name=webapp-url::https://$(az webapp show -n dotnet2022 -g rg-dotnet2022  --query defaultHostName -o tsv)"
